--- a/cds101_starter_kit/final_report_template.Rmd
+++ b/cds101_starter_kit/final_report_template.Rmd
@@ -12,14 +12,18 @@ output:
     toc: true
 ---
 
-> Replace this template text with your own writing, keeping the headings and overall structure aligned with the **CDS 101 project rubric**.
+
 
 # 1. Problem Definition
 
-- Clearly state the main problem or question you are investigating.  
-- Explain why it is interesting or important.  
-- Define the objective(s) of your analysis.  
+- Clearly state the main problem or question you are investigating.
+The question that our group is investigating explores how the fuel economy has changed in United States vehicles from 2005 to 2020. Our specific research question is "Which car features, like mileage, price, engine type, etc, have the strongest effect on vehicle price?"
+- Explain why it is interesting or important.
+This question is interesting because it allows us to see trends and patterns between different variables like engine type and mileage in relation to the price of the vehicle as a whole.
+- Define the objective(s) of your analysis.
+Our main objectives include cleaning the data, fixing missing values, and creating visualizations such as bar plots and scatter plots.
 - Mention any key assumptions.
+Key assumptions that we have made are that certain features, especially car year, mileage, and engine size will strongly relate to price. Newer cars and cars with bigger engines will cost more, while cars with high mileage will usually be priced lower. Fuel type and transmission also show clear price differences. Overall, we expect the multiple regression model to perform better than the simple model because it captures more variables that influence price.
 
 # 2. Data Acquisition & Description
 
@@ -38,22 +42,13 @@ cars_raw <- read_csv("data/cars_data.csv")
 
 # 3. Data Cleaning & Preprocessing
 
+Data Cleaning & Preprocessing
 Describe the steps you took to make the data usable, for example:
+ Steps that we have taken to make the data usable include...
+ - filtering
+ - renaming
+ - mutating
 
-- Handling missing values (drop, impute, etc.).  
-- Fixing types (dates, numeric vs. categorical).  
-- Removing outliers (if done).  
-- Creating new features (feature engineering).  
-- Any scaling or encoding.
-
-```{r cleaning, eval=FALSE}
-# Example pseudo-code for cleaning:
-# data_clean <- data |>
-#   dplyr::filter(!is.na(target_variable)) |>
-#   dplyr::mutate(
-#     new_feature = some_transformation(old_feature)
-#   )
-```
 
 ```{r}
 cars_clean <- cars_raw %>%
@@ -134,12 +129,13 @@ ggplot(cars_clean) +
 
 Use this section to satisfy the **Visualization Quality** rubric criterion:
 
-- Explain why your plot types are appropriate.  
-- Comment on labels, legends, colors, and overall readability.  
-- Mention any steps you took to make plots accessible and interpretable.
+Histograms specifically help us to visualize distributions within our data set which can help us understand how our outlined variables affect vehicle pricing. Utilizing bar graphs helped us see how the average prices changed across specific car models, and scatter plotting helped us visualize what kind of influence our variables had over increasing or decreasing prices. Boxplots are appropriate to our research as well because they illustrate outliers, and help us see things like the median and maximum values easier.
+
+Upon making our graphs, we tried our best to use titles that were an accurate depiction of what the graph was showcasing as well as labeling our axis concisely. Ultimately we didn't really make use of many legends because most of our graphs were very simplistic and didn't require one... for example our first and second graphs only contained one variable and one color. Similar to this, our color choices were very straight forward and were chosen ensure readability and deter any confusion.
+
+Additionally, we used increments in our graphs that were simplistic and appropriate for mileage and price...the price went up in increments of 10,000 and the mileage went up in increments of 250. For the different car models we used no more than seven to ensure that we weren't decreasing the legitimacy of our analysis by having too many areas of focus.
 
 # 6. Modeling Approach
-
 
 Since our outcome variable we chose was price and its numeric and continuous, a regression model seemed the most appropriate.
 We started with a Baseline model and its prupose was to set a reference point for our real model should do better than to be somewhat useful.
@@ -149,11 +145,6 @@ After our baseline we made or main model which was a multiple linear regression 
 
 # 7. Model Implementation & Evaluation
 
-This corresponds to the **Model Implementation & Evaluation** rubric criterion.
-
-Describe:
-
-- Features used.  
 
 Our model used Mileage, Enginev, and Year as numeric predictors and Brand, Bodytype, and Enginetype as categorical. They were chose becuase they're the most common factors that would influence a cars market value.
 - Data splitting strategy (train/test or cross-validation).
@@ -169,8 +160,10 @@ Our baseline RMSE was 23,146.9 which means the guess is off by around 23k on ave
 
 We built a multiple linear regression model predicting price based on numeric and categorical predictors.
 Linear regressions works best becuase our target Price is numeric as well. After training our linear model the RMSE was 16,786.2 which is a lot lower than the baseline.
+
 This meant our model was doing better, and the adjusted R² was 0.4376 which means about 43.8% of the variation in car prices was explained by the  
 - A short interpretation of each metric/plot.
+
 The multiple linear regression model clearly did better the baseline model, lowering the error by over $6,000 on average.
 The adjusted R² shows our model explains a meaningful part of price variation but doesn't grab  everything.
 This makes sense because real-world car pricing depends on so many other factors that aren't part of the data set like car condition, past accidents, location, seller, etc.
@@ -200,19 +193,13 @@ summary(model)$adj.r.squared
 
 # 8. Conclusions & Recommendations
 
-Summarize the key takeaways:
-
-- Answer your original research question(s) directly.  
-- Highlight the most important patterns or relationships you found.  
-- Discuss limitations (data size, bias, missing variables, etc.).  
-- Suggest possible extensions or future work.
+As mileage increases, our price variable decreases significantly and vehicles that are high in price are typically low in mileage which we expected to see. Companies like Mercedes, BMW, and Audi are also tend to be higher in price than companies like Toyota and Volkswagen. The distribution of our price histograms are generally right skewed and our mileage graphs are also skewed, showing and average mileage but also a stretch of high mileage vehicles too. Our two biggest predictors of price included mileage and brand as our findings showed a significant relationship between vehicles with a higher price having lower mileage (the scatter plot is a great representation of this takeaway). Additionally, the bar graph showcases price among specified higher and lower end brands. This helps us conclude that car prices are directly impacted by how far they have been driven and the status of the manufacturer. Some limitations include that price can vary among vehicles even if they are the same brand and model due to the specific packages that are bought (heated seats, leather..ect. Another limitation could be that we don't have representative sample sizes to actually prove if our data is significant or not. Extensions for future work could examine more closely specific types of engines or fuel types to get a more diversified data set.
 
 # 9. Code Quality & Reproducibility
 
-Briefly document how someone else can reproduce your results:
-
-- Which R scripts or Rmd files to run.  
-- Any required R packages.  
+To make sure our results can be reproduced by anyone all of our analysis is in the markdown file which loads our dataset, cleans it,
+graph the visualizations, and runs the test models. 
+The required R packages are mainly dplyr, ggplot2, and tidyverse.
 
 ```{r session-info, echo=FALSE}
 sessionInfo()
@@ -220,12 +207,13 @@ sessionInfo()
 
 # 10. References
 
-List any references you used, such as:
+Used car dataset from Kaggle:(https://www.kaggle.com/datasets/nehalbirla/vehicle-dataset-from-cardekho)
 
-- Dataset documentation.  
-- Research papers or articles.  
-- Tutorials or blog posts.
+CDS 101 textbook and class materials for help on data cleaning, visualization, and modeling
 
-# Appendix (Optional)
+Introduction to Linear Regression concepts from the CDS 101 textbook: https://cdsbook.github.io/book/
 
-Include extra plots, diagnostic checks, or model comparisons if needed.
+ggplot2 documentation: https://ggplot2.tidyverse.org/
+
+R Markdown documentation: https://rmarkdown.rstudio.com/
+
