--- a/cds101_starter_kit/proposal_template.Rmd
+++ b/cds101_starter_kit/proposal_template.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "CDS 101 – Final Project Proposal"
-author: "Group Name / Members"
+author: "Ankith, Julia, Ruhama"
 date: "`r format(Sys.Date(), '%B %d, %Y')`"
 output:
   html_document:
